# cnj

./: .shellcheckrc  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  build.rs  cliff.toml  config.toml  dprint.json
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
benches/: results.md
dev/: bench.sh  comments-tidy.sh  doc-readme.sh  readme.sh
src/: cli.rs  cnj.rs  help.rs  input.rs  lib.rs  main.rs  types.rs
src/commands/: mod.rs  validate.rs
src/subcommands/: check.rs  completions.rs  mod.rs  validate.rs
