[package]
name = "cnj"
version = "0.6.0"
authors = ["Rodolfo Mói de Oliveira <rodmoi.oliveira@gmail.com>"]
build = "build.rs"
categories = ["legal", "data-processing", "validation"]
documentation = "https://github.com/rodmoioliveira/cnj"
edition = "2021"
homepage = "https://github.com/rodmoioliveira/cnj"
keywords = ["cnj validation"]
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rodmoioliveira/cnj"
description = """
cnj is a CLI for validating and manipulating CNJ numbers"""

[[bin]]
name = "cnj"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env", "cargo", "help"] }
clap_complete = "4.5.58"
csv = "1.3.1"
grep-cli = "0.1.11"
libc = "0.2.175"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
chrono = "0.4.42"
